--- a/content/post/java/多环境变量不生效.md
+++ b/content/post/java/多环境变量不生效.md
@@ -1,7 +1,7 @@
 ---
 title: "多环境变量不生效"
 date: 2021-08-23T10:46:24+08:00
-draft: true
+draft: false
 ---
 
 参考https://www.cnblogs.com/serviceMyself/p/14806325.html
